methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:53: error: Unit does not take parameters
    remonterLigne();
                 ^