methods.picture.PictureMono2.scala.code
override def run() {
  

  
  def faireV() {
    avance(2);
    baisseBrosse();
    leveBrosse();
    
    avance();
    gauche();
    avance();
    baisseBrosse();
    leveBrosse();
    recule();
    droite();
    
    avance();
    baisseBrosse();
    leveBrosse();
    avance(2);
    gauche();
    
    
    
  }
  
  
  
  def faireMotif() {
    
   for(i<-0 to 3) {
    faireV;
    }
    
    avance(7);
    
   }
  
  
  
  def remonterLigne {
    gauche();
    avance(7);
  }
  
  
  
  
  
  for (i<- 0 to 2) {
    faireMotif();
    remonterLigne();
  }
 
  
  
  
  
  
  
}
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
